<resources>
    <string name="app_name">Wootlab Banking</string>
    <string name="woot_lab_logo">woot lab logo</string>
    <string name="main_bg">main bg</string>
    <string name="to_become">To become a strong, trusted,competitive regional bank,
        and to support economic development in Nigeria</string>
    <string name="get_started">Get Started</string>
    <string name="wootlab_banking">Wootlab Banking</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">SIGN IN</string>
    <string name="login">Login</string>
    <string name="social_signup">Social signup</string>
    <string name="new_user">New user?</string>
    <string name="sign_up"> Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="sign_up_caps">SIGN UP</string>
    <string name="woot_lab_desc">Wootlab Bank provides cash transactions which are safe and comfortable</string>
    <string name="welcome">Welcome</string>
    <string name="sulaiman_danmallan">Sulaiman Danmallan</string>
    <string name="your_balance">Your balance</string>
    <string name="drawable_assets">drawable_assets</string>
    <string name="pay">Pay</string>
    <string name="accept">Accept</string>
    <string name="bill">Bill</string>
    <string name="transaction">Transaction</string>
    <string name="loans">Loans</string>
    <string name="credit">Credit</string>
    <string name="mutual_fund">Mutual Fund</string>
    <string name="deposit">Deposit</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="withdraw_cash">Withdraw cash</string>
    <string name="_10_30_23_aug">10.30 23 Aug</string>
    <string name="_4_500_00">₦ 4,500.00</string>
    <string name="payment">Payment</string>
    <string name="_11_30_23_aug">11.30 23 Aug</string>
    <string name="_500_00">₦ 500.00</string>
    <string name="expenditure">Expenditure</string>
    <string name="_12_30_23_aug">12.30 23 Aug</string>
    <string name="_200_00">₦ 200.00</string>
    <string name="monthly_subscription">Monthly Subscription</string>
    <string name="_13_30_23_aug">13.30 23 Aug</string>
    <string name="_800_00">₦ 800.00</string>
    <string name="enter_your_email_address_below_and_we_will_send_you_password_reset_instructions">Enter your email address below and we will send you password reset instructions</string>
    <string name="forgot_password1">forgot password</string>
</resources>