<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="610dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/main_bg"
            android:src="@drawable/ic_gmbr" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="110dp"
            android:contentDescription="@string/woot_lab_logo"
            android:background="@drawable/woot_lab_logo"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="-200dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wootlab_banking"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/text1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/to_become"
            android:textColor="@color/text1"/>

    </LinearLayout>


    <TextView
        android:id="@+id/get_started"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:background="@drawable/bg_text"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/get_started"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:focusable="true"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"/>


</LinearLayout>